Correct letter-spacing, add btn inherit

--- a/css/common.css
+++ b/css/common.css
@@ -7,8 +7,8 @@
 
 body {
     background-color: #fff;
-
     font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.03em;
 } 
 
 /* Header */
